--- a/uiuser/build.gradle
+++ b/uiuser/build.gradle
@@ -16,6 +16,11 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                compilerArgumentProvider new EnableDaggerIncrementalAP()
+            }
+        }
     }
 
     buildTypes {
@@ -38,4 +43,12 @@ dependencies {
 
     testImplementation project(':testData')
     testImplementation "org.mockito:mockito-inline:$mockito_version"
+}
+
+class EnableDaggerIncrementalAP implements CommandLineArgumentProvider {
+
+    @Override
+    Iterable<String> asArguments() {
+        return ["-Adagger.gradle.incremental"]
+    }
 }
