--- a/uiuserTest/build.gradle
+++ b/uiuserTest/build.gradle
@@ -11,6 +11,11 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                compilerArgumentProvider new EnableDaggerIncrementalAP()
+            }
+        }
 
         testInstrumentationRunner 'it.codingjam.github.espresso.MockTestRunner'
     }
@@ -39,7 +44,15 @@ android {
 dependencies {
     implementation project(':uiuser')
 
-    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
     androidTestImplementation project(':androidTestLib')
     androidTestImplementation project(':testData')
+}
+
+class EnableDaggerIncrementalAP implements CommandLineArgumentProvider {
+
+    @Override
+    Iterable<String> asArguments() {
+        return ["-Adagger.gradle.incremental"]
+    }
 }
